--- a/html/index.html
+++ b/html/index.html
@@ -59,7 +59,7 @@
       </tr>
       <tr>
         <td>Minister of Justice</td>
-        <td>Evelina Dobrovolska</td>
+        <td>Ewelina Dobrowolska</td>
       </tr>
       <tr>
         <td>Minister of National Defence</td>
